--- a/c10/BUILD.bazel
+++ b/c10/BUILD.bazel
@@ -39,10 +39,9 @@ header_template_rule(
 cc_library(
     name = "headers",
     hdrs = [
+        "//c10/core:headers",
         "//c10/util:headers",
     ] + glob([
-        "core/*.h",
-        "core/impl/*.h",
         "cuda/*.h",
         "cuda/impl/*.h",
         "mobile/*.h",
@@ -58,10 +57,9 @@ cc_library(
 cc_library(
     name = "c10",
     srcs = [
+        "//c10/core:sources",
         "//c10/util:sources",
     ] + glob([
-        "core/*.cpp",
-        "core/impl/*.cpp",
         "mobile/*.cpp",
     ]) + if_cuda(
         glob([
