--- a/c10/BUILD.bazel
+++ b/c10/BUILD.bazel
@@ -70,7 +70,7 @@ cc_library(
     copts = ["-DCAFFE2_BUILD_MAIN_LIB"],
     deps = [
         ":headers",
-        "//c10/core:ScalarType",
+        "//c10/core:base",
     ] + if_cuda(
         ["@cuda"],
         [],
