--- a/c10/BUILD.bazel
+++ b/c10/BUILD.bazel
@@ -58,9 +58,7 @@ cc_library(
     name = "c10",
     srcs = [
         "//c10/core:sources",
-    ] + glob([
-        "mobile/*.cpp",
-    ]) + if_cuda(
+    ] + if_cuda(
         glob([
             "cuda/*.cpp",
             "cuda/impl/*.cpp",
@@ -73,6 +71,7 @@ cc_library(
         "//c10/core:base",
         "//c10/core:alloc_cpu",
         "//c10/core:free_cpu",
+        "//c10/mobile",
     ] + if_cuda(
         ["@cuda"],
         [],
