[quant] make quantize_per_tensor/per_channel accept qscheme argument Summary: qscheme is used to denote which mode was used to calculate the scale/zero_point for the tensor
Test Plan:
```
>>> x = torch.rand(2, 2)
>>> qx = torch.quantize_per_tensor(x, 1.0, 0, torch.quint8, torch.per_tensor_affine)
>>> qx
tensor([[0., 0.],
        [0., 1.]], size=(2, 2), dtype=torch.quint8,
       quantization_scheme=torch.per_tensor_affine, scale=1.0, zero_point=0)
>>> qx = torch.quantize_per_tensor(x, 1.0, 0, torch.quint8, torch.per_tensor_symmetric)
>>> qx
tensor([[0., 0.],
        [0., 1.]], size=(2, 2), dtype=torch.quint8,
       quantization_scheme=torch.per_tensor_symmetric, scale=1.0, zero_point=0)

>>> qx = torch.quantize_per_channel(x, torch.tensor([1.0, 1.0]), torch.tensor([0, 0]), 0, torch.quint8, torch.per_channel_symmetric)
>>> qx
tensor([[0., 0.],
        [0., 1.]], size=(2, 2), dtype=torch.quint8,
       quantization_scheme=torch.per_channel_symmetric,
       scale=tensor([1., 1.], dtype=torch.float64), zero_point=tensor([0, 0]),
       axis=0)
>>> qx = torch.quantize_per_channel(x, torch.tensor([1.0, 1.0]), torch.tensor([0, 0]), 0, torch.quint8, torch.per_channel_affine)
>>> qx
tensor([[0., 0.],
        [0., 1.]], size=(2, 2), dtype=torch.quint8,
       quantization_scheme=torch.per_channel_affine,
       scale=tensor([1., 1.], dtype=torch.float64), zero_point=tensor([0, 0]),
       axis=0)
```

Reviewers:

Subscribers:

Tasks:

Tags:

[ghstack-poisoned]

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -5502,10 +5502,20 @@
   dispatch:
     CPU: quantize_per_tensor_list_cpu
 
+- func: quantize_per_tensor.qscheme(Tensor self, float scale, int zero_point, ScalarType dtype, QScheme qscheme) -> Tensor
+  variants: function
+  dispatch:
+    CPU, CUDA: quantize_per_tensor_w_qscheme
+
 - func: quantize_per_channel(Tensor self, Tensor scales, Tensor zero_points, int axis, ScalarType dtype) -> Tensor
   variants: function
   dispatch:
     CPU, CUDA: quantize_per_channel
+
+- func: quantize_per_channel.qscheme(Tensor self, Tensor scales, Tensor zero_points, int axis, ScalarType dtype, QScheme qscheme) -> Tensor
+  variants: function
+  dispatch:
+    CPU, CUDA: quantize_per_channel_w_qscheme
 
 - func: dequantize.self(Tensor self) -> Tensor
   variants: function, method
