Update on "extract //c10/macros to its own package"
Differential Revision: [D33297235](https://our.internmc.facebook.com/intern/diff/D33297235/)

[ghstack-poisoned]

--- a/c10/macros/BUILD.bazel
+++ b/c10/macros/BUILD.bazel
@@ -16,8 +16,8 @@ cc_library(
 
 header_template_rule(
     name = "cmake_macros_h",
-    src = "macros/cmake_macros.h.in",
-    out = "macros/cmake_macros.h",
+    src = "cmake_macros.h.in",
+    out = "cmake_macros.h",
     substitutions = {
         "cmakedefine": "define",
         "#define C10_USE_NUMA": "/* #undef C10_USE_NUMA */",
