Update base for Update on "use c10/macros/cmake_macros.h in fbcode build"
Differential Revision: [D33299102](https://our.internmc.facebook.com/intern/diff/D33299102/)

**NOTE FOR REVIEWERS**: This PR has internal Facebook specific changes or comments, please review them on [Phabricator](https://our.internmc.facebook.com/intern/diff/D33299102/)!

[ghstack-poisoned]

--- a/c10/macros/BUILD.bazel
+++ b/c10/macros/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@rules_cc//cc:defs.bzl", "cc_library")
-load("//tools/config:defs.bzl", "cmake_configure_file")
+load(":cmake_configure_file.bzl", "cmake_configure_file")
 
 cc_library(
     name = "macros",
