--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -11075,6 +11075,7 @@
   python_module: linalg
   dispatch:
     CPU, CUDA: linalg_solve_out
+    SparseCsrCPU: linalg_solve_sparse_csr_out
 
 - func: linalg_tensorinv(Tensor self, int ind=2) -> Tensor
   python_module: linalg
