--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -11005,6 +11005,38 @@
   python_module: linalg
   variants: function
 
+- func: linalg_svd_rank_revealing(Tensor input, float tol, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
+  python_module: linalg
+  variants: function
+
+- func: linalg_svd_rank_revealing.out(Tensor input, float tol, bool full_matrices=True, *, Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank) -> (Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank)
+  python_module: linalg
+  variants: function
+
+- func: linalg_svd_rank_revealing.tol(Tensor input, Tensor tol, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
+  python_module: linalg
+  variants: function
+
+- func: linalg_svd_rank_revealing.tol_out(Tensor input, Tensor tol, bool full_matrices=True, *, Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank) -> (Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank)
+  python_module: linalg
+  variants: function
+
+- func: linalg_svd_rank_revealing.tartol(Tensor input, *, Tensor? atol=None, Tensor? rtol=None, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
+  python_module: linalg
+  variants: function
+
+- func: linalg_svd_rank_revealing.tartol_out(Tensor input, *, Tensor? atol=None, Tensor? rtol=None, bool full_matrices=True, Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank) -> (Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank)
+  python_module: linalg
+  variants: function
+
+- func: linalg_svd_rank_revealing.fartol(Tensor input, *, float? atol=None, float? rtol=None, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
+  python_module: linalg
+  variants: function
+
+- func: linalg_svd_rank_revealing.fartol_out(Tensor input, *, float? atol=None, float? rtol=None, bool full_matrices=True, Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank) -> (Tensor(a!) U, Tensor(b!) S, Tensor(c!) Vh, Tensor(d!) rank)
+  python_module: linalg
+  variants: function
+
 - func: linalg_cond(Tensor self, Scalar? p=None) -> Tensor
   python_module: linalg
   variants: function
