--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -6458,7 +6458,11 @@
   device_check: NoCheck
   device_guard: False
 
-- func: linalg_trace(Tensor self, int offset=0) -> Tensor
+- func: linalg_trace.out(Tensor self, *, int offset=0, Tensor(a!) out) -> Tensor(a!)
+  python_module: linalg
+  variants: function
+
+- func: linalg_trace(Tensor self, *, int offset=0) -> Tensor
   python_module: linalg
   variants: method, function
 
