--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -799,6 +799,12 @@
   self: pinv_backward(grad, result, self)
   result: pinv_jvp(self_p, result, self_t)
 
+- name: linalg_svd_rank_revealing.tartol(Tensor input, *, Tensor? atol=None, Tensor? rtol=None, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
+  input: zeros_like(input)
+  atol: non_differentiable
+  rtol: non_differentiable
+  output_differentiability: [True, True, True, False]
+
 - name: isnan(Tensor self) -> Tensor
   self: non_differentiable
 
