prelimiary backward. grad match but autograd fails with missing device

--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -800,7 +800,7 @@
   result: pinv_jvp(self_p, result, self_t)
 
 - name: linalg_svd_rank_revealing.tartol(Tensor input, *, Tensor? atol=None, Tensor? rtol=None, bool full_matrices=True) -> (Tensor U, Tensor S, Tensor Vh, Tensor rank)
-  input: zeros_like(input)
+  input: linalg_svd_rank_revealing_backward(grads, input, U, S, Vh, rank)
   atol: non_differentiable
   rtol: non_differentiable
   output_differentiability: [True, True, True, False]
