--- a/.github/workflows/generated-linux-binary-manywheel.yml
+++ b/.github/workflows/generated-linux-binary-manywheel.yml
@@ -386,11 +386,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -761,11 +764,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -1139,11 +1145,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -1517,11 +1526,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -1895,11 +1907,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -2265,11 +2280,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -2635,11 +2653,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -3002,11 +3023,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -3377,11 +3401,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -3755,11 +3782,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -4133,11 +4163,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -4511,11 +4544,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -4881,11 +4917,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -5251,11 +5290,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -5618,11 +5660,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -5993,11 +6038,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -6371,11 +6419,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -6749,11 +6800,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -7127,11 +7181,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -7497,11 +7554,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -7867,11 +7927,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
