--- a/.github/workflows/generated-linux-binary-libtorch-pre-cxx11.yml
+++ b/.github/workflows/generated-linux-binary-libtorch-pre-cxx11.yml
@@ -389,11 +389,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -759,11 +762,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -1129,11 +1135,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -1499,11 +1508,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -1877,11 +1889,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -2255,11 +2270,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -2633,11 +2651,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -3011,11 +3032,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -3392,11 +3416,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -3773,11 +3800,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -4154,11 +4184,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -4535,11 +4568,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -4916,11 +4952,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -5297,11 +5336,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -5678,11 +5720,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -6059,11 +6104,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -6440,11 +6488,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -6821,11 +6872,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -7202,11 +7256,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
@@ -7583,11 +7640,14 @@ jobs:
           ANACONDA_API_TOKEN: ${{ secrets.CONDA_PYTORCHBOT_TOKEN }}
         run: |
           docker run --rm -it \
-            -e PKG_DIR=/artifacts \
-            -e UPLOAD_SUBFOLDER \
+            -e ANACONDA_API_TOKEN \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
-            -e ANACONDA_API_TOKEN \
+            -e DRY_RUN \
+            -e PACKAGE_TYPE \
+            -e PKG_DIR=/artifacts \
+            -e UPLOAD_CHANNEL \
+            -e UPLOAD_SUBFOLDER \
             -v "${RUNNER_TEMP}/artifacts:/artifacts" \
             -v "${GITHUB_WORKSPACE}:/v" \
             -w /v \
